# efficio-task-tracker

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  login_window.cpp  login_window.h  login_window.ui  login_window_style_sheet.h  main.cpp  note_edit_dialog.cpp  note_edit_dialog.h  note_edit_dialog.ui  note_edit_window.cpp  note_edit_window.h  note_edit_window.ui  registration_window.cpp  registration_window.h  registration_window.ui  registration_window_style_sheet.h  style_sheet.h  tags_dialog.cpp  tags_dialog.h
client/: CMakeLists.txt  main.cpp
client/client/: CMakeLists.txt  test_server.cpp
client/client/include/: auth_requests.h  client_implementation.h  common_client_call.h  update_requests.h
client/client/src/: auth_requests.cpp  client_implementation.cpp  update_requests.cpp
client/database/: database_manager.cpp
client/database/src/: lr_dao.cpp  note_dao.cpp  serialization.cpp
client/scripts/: user.hpp
client/ui/MainWindow/src/: bottombar.cpp  mainwindow.cpp  notelist.cpp  notewidget.cpp  projectitem.cpp
client/ui/analytics-window/include/: analytics_window.h  analytics_window_style_sheet.h
client/ui/analytics-window/src/: analytics_window.cpp
client/ui/authorization-windows/: CMakeLists.txt
client/ui/authorization-windows/include/: login_window.h  login_window_style_sheet.h  registration_window.h  registration_window_style_sheet.h
client/ui/authorization-windows/src/: login_window.cpp  registration_window.cpp
client/ui/language-manager/: CMakeLists.txt
client/ui/language-manager/include/: language_manager.h
client/ui/language-manager/src/: language_manager.cpp
client/ui/login-and-registration-windows/: CMakeLists.txt
client/ui/login-and-registration-windows/src/: login_window.cpp
client/ui/main-window/: CMakeLists.txt
client/ui/main-window/include/: applicationwindow.h  bottombar.h  main_window_style.hpp  mainwindow.h  notelist.h  notewidget.h  projectitem.h  projectlist.h
client/ui/main-window/src/: applicationwindow.cpp  bottombar.cpp  mainwindow.cpp  notelist.cpp  notewidget.cpp  projectitem.cpp  projectlist.cpp
client/ui/note-widget/: CMakeLists.txt  NoteWidgetEfficio_ru_RU.ts
client/ui/note-widget/include/: member_selection_dialog.h  note_edit_dialog.h  note_edit_dialog_styles.h  tags_dialog.h  tags_dialog_styles.h
client/ui/note-widget/src/: member_selection_dialog.cpp  note_edit_dialog.cpp  tags_dialog.cpp
client/ui/note-widget/ui/: note_edit_dialog.ui
client/ui/profile-window/: CMakeLists.txt
client/ui/profile-window/include/: profile_window.h  profile_window_style_sheet.h
client/ui/profile-window/src/: profile_window.cpp
client/ui/settings-window/: CMakeLists.txt
client/ui/settings-window/include/: settings_window.h  settings_window_style_sheet.h
client/ui/settings-window/src/: settings_window.cpp
client/ui/style-manager/: CMakeLists.txt
client/ui/style-manager/include/: style_manager.h
client/ui/style-manager/src/: style_manager.cpp
client/ui/theme-manager/: CMakeLists.txt
client/ui/theme-manager/include/: theme_manager.h
client/ui/theme-manager/src/: theme_manager.cpp
login-and-registration-windows/: CMakeLists.txt  login_window  login_window.h  registration_window.h
login-and-registration-windows/login_window_autogen/: moc_predefs.h
login-and-registration-windows/login_window_autogen/EWIEGA46WW/: moc_login_window.cpp.d  moc_registration_window.cpp.d
logs/: logs.txt  (+1 more)
project-storage-model/: .gitignore  CMakeLists.txt  MyProject  a.out  build_project.sh  main.cpp  note.cpp  note.hpp  note.proto  project.cpp  project.hpp  project.proto  storage.cpp  storage.hpp  storage.proto  user.cpp  user.hpp  user.proto
project-storage-model/include/: note.hpp  project.hpp  storage.hpp  user.hpp
project-storage-model/src/: note.cpp  project.cpp  storage.cpp  user.cpp
proto/: CMakeLists.txt  main.cpp
proto/efficio-rpc-proto/: efficio.proto
proto/model-proto/: model.proto
scripts/: CMakeLists.txt  note.cpp  note.hpp  project.cpp  project.hpp  storage.cpp  storage.hpp  user.cpp
scripts/include/: note.hpp  project.hpp  storage.hpp  user.hpp
scripts/src/: note.cpp  project.cpp  storage.cpp  user.cpp
server/Handlers/: CMakeLists.txt
server/Handlers/include/: update_handler.hpp
server/Handlers/src/: update_handler.cpp
server/Service/: CMakeLists.txt
server/Service/include/: auth_service.h  common_call.h  common_server_call.h  server_implementation.h  update_service.h
server/Service/src/: auth_service.cpp  server_implementation.cpp  update_service.cpp
server/database/: CMakeLists.txt
server/database/include/: database_manager.hpp  lr_dao.hpp  note_dao.hpp  project_dao.hpp  serialization.hpp
server/database/src/: database_manager.cpp  lr_dao.cpp  note_dao.cpp  project_dao.cpp
ui/MainWindow/: CMakeLists.txt
ui/MainWindow/include/: applicationwindow.h  mainwindow.h  notelist.h  notewidget.h  projectitem.h  projectlist.h
ui/MainWindow/src/: applicationwindow.cpp  bottombar.cpp  mainwindow.cpp  notelist.cpp  notewidget.cpp  projectlist.cpp
ui/analytics-window/: CMakeLists.txt
ui/analytics-window/include/: analytics_window.h  analytics_window_style_sheet.h
ui/analytics-window/src/: analytics_window.cpp
ui/login-and-registration-windows/: CMakeLists.txt  login_window  login_window.cpp  main.cpp
ui/login-and-registration-windows/login_window_autogen/: mocs_compilation.cpp
ui/note-widget/: CMakeLists.txt  main.cpp  note_edit_dialog.cpp  note_edit_dialog.h  note_edit_dialog.ui  note_edit_dialog_styles.h  tags_dialog.cpp  tags_dialog.h  tags_dialog_styles.h
ui/note-widget/include/: note_edit_dialog.h  note_edit_dialog_styles.h  tags_dialog.h  tags_dialog_styles.h
ui/note-widget/src/: note_edit_dialog.cpp  tags_dialog.cpp
ui/note-widget/ui/: note_edit_dialog.ui
ui/settings-window/: CMakeLists.txt
ui/settings-window/include/: settings_window.h  settings_window_style_sheet.h
ui/settings-window/src/: settings_window.cpp
ui/theme-manager/: CMakeLists.txt
ui/theme-manager/include/: theme_manager.h
ui/theme-manager/src/: theme_manager.cpp
(+88 files in other folders)
